--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@ const uid = ()=>Math.random().toString(36).slice(2,9);
 // ===== Storage =====
 const KEY = 'mc_collection_data_v1';
 function load(){
+  console.log(localStorage());
   try{ return JSON.parse(localStorage.getItem(KEY)) || { owner:'', cats:[], subs:{}, items:[] } }catch{ return { owner:'', cats:[], subs:{}, items:[] } }
 }
 function save(state){ localStorage.setItem(KEY, JSON.stringify(state)) }
